--- a/CSS/invie.css
+++ b/CSS/invie.css
@@ -337,12 +337,18 @@ input:focus, textarea:focus{
 		margin: 0 auto;
 		width: 300px;
 	}
+	.sexo label{
+		display: block;
+	}
 	.intereses label{
 		display: block;
-		font-size: 16px;
+		font-size: 20px;
 	}
 	.col1{
 		margin: 0;
+	}
+	input[type="text"]{
+		margin-bottom: 20px;
 	}
 	input[type="text"],
 	input[type="email"]{
